--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact | 9to5 Home Services</title>
+    <title>Contact | True care solutions</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <div class="logo">9to5 Home Services</div>
+        <div class="logo">True care solutions</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -43,7 +43,7 @@
         </form>
     </section>
     <footer>
-        <p>&copy; 2025 9to5 Home Services. All rights reserved.</p>
+        <p>&copy; 2025 True care solutions. All rights reserved.</p>
     </footer>
 </body>
 </html>
