--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>9to5 Home Services</title>
+    <title>True care solutions</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <div class="logo">9to5 Home Services</div>
+        <div class="logo">True care solutions</div>
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -21,7 +21,7 @@
         <a href="contact.html" class="btn">Request Service</a>
     </header>
     <section class="intro">
-        <h2>Welcome to 9to5 Home Services!</h2>
+        <h2>Welcome to True care solutions!</h2>
         <p>
             We provide dependable home services to keep your property in top shape. From cleaning to repairs, our professional team is ready to help. Discover our services or get in touch today!
         </p>
@@ -41,7 +41,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2025 9to5 Home Services. All rights reserved.</p>
+        <p>&copy; 2025 True care solutions. All rights reserved.</p>
     </footer>
 </body>
 </html>
