--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             Ready to book a service or have questions? Reach out to our team!
         </p>
         <ul>
-            <li><strong>Email:</strong> info@9to5homeservices.com</li>
+            <li><strong>Email:</strong> info@truecaresolutions.in</li>
             <li><strong>Phone:</strong> (555) 123-4567</li>
             <li><strong>Address:</strong> 123 Main Street, YourTown, Country</li>
         </ul>
