--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About | True care solutions</title>
+    <title>About | True care solutions LLC</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <div class="logo">True care solutions</div>
+        <div class="logo">True care solutions LLC</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html" class="active">About</a></li>
@@ -21,7 +21,7 @@
     <section class="about">
         <h2>Our Story</h2>
         <p>
-            True care solutions was founded with one goal: to make home maintenance easy and stress-free. Our team brings years of experience in cleaning, repairs, and property care. We take pride in our professionalism, reliability, and commitment to customer satisfaction.
+            True care solutions LLC was founded with one goal: to make home maintenance easy and stress-free. Our team brings years of experience in cleaning, repairs, and property care. We take pride in our professionalism, reliability, and commitment to customer satisfaction.
         </p>
         <h2>Why Choose Us?</h2>
         <ul>
@@ -37,7 +37,7 @@
         </p>
     </section>
     <footer>
-        <p>&copy; 2025 True care solutions. All rights reserved.</p>
+        <p>&copy; 2025 True care solutions LLC. All rights reserved.</p>
     </footer>
 </body>
 </html>
