--- a/contact.html
+++ b/contact.html
@@ -164,13 +164,13 @@
   <h2 id="contact-heading">Get in Touch</h2>
   <p>Ready to book a service or have questions? Reach out to our team!</p>
   <ul>
-    <li><strong>Email:</strong> <a href="mailto:info@truecaresolutions.in">info@truecaresolutions.in</a></li>
+    <li><strong>Email:</strong> <a href="mailto:Service@truecaresolutions.in">@truecaresolutions.in</a></li>
     <li><strong>Phone:</strong> <a href="tel:+15551234567">(555) 123-4567</a></li>
     <li><strong>Address:</strong> 123 Main Street, YourTown, Country</li>
   </ul>
 
   <h2>Send Us a Message</h2>
-  <form class="contact-form" action="mailto:info@truecaresolutions.in" method="POST" enctype="text/plain" aria-label="Contact form">
+  <form class="contact-form" action="mailto:Service@truecaresolutions.in" method="POST" enctype="text/plain" aria-label="Contact form">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" placeholder="Your full name" required />
 
