--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
   <h2 id="contact-heading">Get in Touch</h2>
   <p>Ready to book a service or have questions? Reach out to our team!</p>
   <ul>
-    <li><strong>Email:</strong> <a href="mailto:Service@truecaresolutions.in">@truecaresolutions.in</a></li>
+    <li><strong>Email:</strong> <a href="mailto:Service@truecaresolutions.in">Service@truecaresolutions.in</a></li>
     <li><strong>Phone:</strong> <a href="tel:+15551234567">(555) 123-4567</a></li>
     <li><strong>Address:</strong> 123 Main Street, YourTown, Country</li>
   </ul>
