--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>About | True care solutions LLC</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <title>About | True Care Solutions LLC</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <nav>
-        <div class="logo">True care solutions LLC</div>
+        <div class="logo">True Care Solutions LLC</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html" class="active">About</a></li>
@@ -15,29 +15,33 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
     <header>
         <h1>About Us</h1>
     </header>
+
     <section class="about">
-        <h2>Our Story</h2>
+        <h2>Who We Are</h2>
         <p>
-            True care solutions LLC was founded with one goal: to make home maintenance easy and stress-free. Our team brings years of experience in cleaning, repairs, and property care. We take pride in our professionalism, reliability, and commitment to customer satisfaction.
+            At True Care Solutions LLC, we specialize in providing seamless and dependable home maintenance services. Our experienced team is dedicated to ensuring your property remains in top condition with skill, care, and professionalism.
         </p>
-        <h2>Why Choose Us?</h2>
+
+        <h2>What Sets Us Apart</h2>
         <ul>
-            <li>Locally owned and operated</li>
-            <li>Fully insured and qualified staff</li>
-            <li>Clear, upfront pricing</li>
-            <li>Flexible appointments</li>
-            <li>Friendly service</li>
+            <li>USA regestred company</li>
+            <li>Transparent pricing with no hidden fees</li>
+            <li>Scheduling flexibility to fit your busy lifestyle</li>
+            <li>Committed to delivering exceptional customer experiences</li>
         </ul>
-        <h2>Our Mission</h2>
+
+        <h2>Our Vision</h2>
         <p>
-            To deliver reliable home services with integrity, excellence, and a smile—every time.
+            We strive to be your trusted partner for all your home service needs by consistently exceeding expectations through quality workmanship, integrity, and outstanding support.
         </p>
     </section>
+
     <footer>
-        <p>&copy; 2025 True care solutions LLC. All rights reserved.</p>
+        <p>&copy; 2025 True Care Solutions LLC. All rights reserved.</p>
     </footer>
 </body>
 </html>
