--- a/about.html
+++ b/about.html
@@ -101,25 +101,24 @@
   <section>
     <h2>Who We Are</h2>
     <p>
-      True Care Solutions LLC is a US-registered company specializing in expert technical repair services designed to meet the unique needs of AT&T stores. Our experienced technicians deliver high-quality workmanship with professionalism and care, ensuring your operations stay up and running smoothly.
+      True Care Solutions LLC specializes in expert technical repair services tailored to meet diverse project needs. Our skilled technicians deliver high-quality workmanship with professionalism and care, ensuring smooth and reliable results.
     </p>
   </section>
 
   <section>
     <h2>What Sets Us Apart</h2>
     <ul>
-      <li>Locally owned and operated with strong community focus</li>
-      <li>Fully licensed, insured, and highly trained professionals</li>
-      <li>Transparent pricing with no surprise fees</li>
-      <li>Flexible scheduling tailored to your needs</li>
-      <li>Dedicated customer support and satisfaction guarantee</li>
+      <li>Experienced and highly trained professionals</li>
+      <li>Transparent pricing with no hidden fees</li>
+      <li>Flexible scheduling tailored to your requirements</li>
+      <li>Dedicated customer support focused on satisfaction</li>
     </ul>
   </section>
 
   <section>
     <h2>Our Business Model</h2>
     <p>
-      We connect the right technicians with the right projects, streamlining the repair process for both clients and technicians. Our NET-30 ACH payment terms ensure reliable and timely payments. Partnering with AT&T stores, we handle all repair needs with the utmost quality and efficiency.
+      We connect the right technicians with the right projects, streamlining the repair process for both clients and service providers. Our NET-30 ACH payment terms ensure reliable and timely payments.
     </p>
     <p>
       Clients submit their service requests, and we match them with certified technicians in our network. Technicians benefit from steady work opportunities aligned with their skills and schedules. This collaborative model creates a win-win environment for everyone.
@@ -129,7 +128,7 @@
   <section>
     <h2>Our Vision</h2>
     <p>
-      We aim to be the trusted link between customers and technicians by delivering exceptional service with integrity, transparency, and excellence. At True Care Solutions LLC, your satisfaction is our top priority.
+      We strive to be the trusted link between customers and technicians by delivering exceptional service with integrity, transparency, and excellence. At True Care Solutions LLC, your satisfaction is our top priority.
     </p>
   </section>
 
